--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "gpupo/mercadolivre-sdk",
+    "name": "lojavirtual/mercadolivre-sdk",
     "description": "SDK Não Oficial para integração a partir de aplicações PHP com APIs Mercadolivre",
     "homepage": "https://opensource.gpupo.com/mercadolivre-sdk/",
     "authors": [
